--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
     - name: Log in to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+      with:
+        region: ${{ secrets.AWS_REGION }}
 
     - name: Build, tag, and push image to Amazon ECR
       env:
@@ -39,4 +41,3 @@ jobs:
     - name: Update Lambda function to new image
       run: |
         aws lambda update-function-code --function-name NovaLiquidityMonitoringBot --image-uri $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
